--- a/Tutorial_visualizing_facial_heatmaps/Plot1Face_Tutorial.Rmd
+++ b/Tutorial_visualizing_facial_heatmaps/Plot1Face_Tutorial.Rmd
@@ -56,7 +56,7 @@ eurofam<-read.table("../Dataset/euro_1233_masc_het_03292018.dat",sep="\t",header
 #determine the index in the ql file which corresponds to the ID you are looking for
 id1.index<-sample(which(eurofam$avg.masc.unit>2),1)
 #isolate the FM_ql values for this person
-id1.ql<-t(qlmasc[id.index,])
+id1.ql<-t(qlmasc[id1.index,])
 Plot1Face(vertices = RefScan_Vertices, facets = RefScan_Facets, colormap = id1.ql, title = "FM_ql")
 ```
 Plot geometric sexual dimorphism for each vertex and Cohen's D estimate for each vertex 
@@ -69,7 +69,7 @@ head(ql_gsd)
 
 ```{r}
 #Cohen's D
-ql_sex_cohenD <- read.table("../Summary_dat/ql_sex_cohenD_03292018.txt", sep = "\t", header = T)
+ql_sex_cohenD <- read.table("../Results/Summary_dat/ql_sex_cohenD_03292018.txt", sep = "\t", header = T)
 head(ql_sex_cohenD)
 ```
 
